[project]
name = "roboticsdatacolleciton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0.74",
    "numpy>=1.26",
    "pyarrow>=15.0.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
]
